--- a/test_compose.yml
+++ b/test_compose.yml
@@ -1,6 +1,5 @@
 services:
   hello-world:
-    image: nginx
     env_file:
       - local.env
       - ./env_files/env_file.env
@@ -10,7 +9,7 @@ services:
 
 configs:
   vote_conf:
-    file: ./vote2.conf
+    file: ./vote.conf
   defaulf_conf:
     file: config_files/config_file.conf
 
