--- a/compose-file-4.yaml
+++ b/compose-file-4.yaml
@@ -1,7 +1,8 @@
-services:
-  nginx:
-    image: nginx:latest
+x-uffizzi:
+  services:
+    nginx:
+      image: nginx:latest
 
-x-uffizzi-ingress:
-  service: nginx
-  port: 80
+  ingress:
+    service: nginx
+    port: 80
