--- a/compose-file-4.yaml
+++ b/compose-file-4.yaml
@@ -7,7 +7,7 @@ services:
   nginx:
     image: nginx:latest
 
-continuous_preview:
+x-uffizzi-continuous_preview:
   deploy_preview_when_pull_request_is_opened: true
   delete_preview_when_pull_request_is_closed: false
   delete_preview_after: 24h
