--- a/compose-file-4.yaml
+++ b/compose-file-4.yaml
@@ -3,11 +3,11 @@ x-uffizzi:
     service: nginx
     port: 80
 
+  continuous_preview:
+    deploy_preview_when_pull_request_is_opened: true
+    delete_preview_when_pull_request_is_closed: false
+    delete_preview_after: 24h
+
 services:
   nginx:
     image: nginx:latest
-
-x-uffizzi-continuous_preview:
-  deploy_preview_when_pull_request_is_opened: true
-  delete_preview_when_pull_request_is_closed: false
-  delete_preview_after: 24h
