--- a/compose-file-4.yaml
+++ b/compose-file-4.yaml
@@ -1,12 +1,13 @@
-x-uffizzi-ingress:
-  service: nginx
-  port: 80
+x-uffizzi:
+  ingress:
+    service: nginx
+    port: 80
+
+  continuous_preview:
+    deploy_preview_when_pull_request_is_opened: true
+    delete_preview_when_pull_request_is_closed: false
+    delete_preview_after: 24h
 
 services:
   nginx:
     image: nginx:latest
-
-x-uffizzi-continuous_preview:
-  deploy_preview_when_pull_request_is_opened: true
-  delete_preview_when_pull_request_is_closed: false
-  delete_preview_after: 24h
