--- a/compose-file-4.yaml
+++ b/compose-file-4.yaml
@@ -3,7 +3,7 @@ x-uffizzi:
     service: nginx
     port: 80
 
-continuous_previews:
+continuous_preview:
   deploy_preview_when_pull_request_is_opened: true
   delete_preview_when_pull_request_is_closed: false
   delete_preview_after: 24h
