--- a/compose-file-4.yaml
+++ b/compose-file-4.yaml
@@ -6,7 +6,7 @@ x-uffizzi:
 services:
   nginx:
     image: nginx:latest
-    continuous-previews:
+    continuous_previews:
       deploy_preview_when_pull_request_is_opened: true
       delete_preview_when_pull_request_is_closed: false
       delete_preview_after: 24h
