--- a/compose-file.yaml
+++ b/compose-file.yaml
@@ -1,14 +1,11 @@
-services:
-  hello-world:
-    build:
-      context: https://github.com/the38th/hexlet-js:local-test-CP
-
 ingress:
-  service: hello-world
+  service: nginx
   port: 80
 
-continuous_preview:
-  deploy_preview_when_pull_request_is_opened: true
-  delete_preview_when_pull_request_is_closed: true
-  delete_preview_after: 12h
-  share_to_github: true
+services:
+  nginx:
+    image: nginx:latest
+    continuous_previews:
+      deploy_preview_when_pull_request_is_opened: true
+      delete_preview_when_pull_request_is_closed: true
+      delete_preview_after: 12h
