--- a/compose-file-4.yaml
+++ b/compose-file-4.yaml
@@ -1,11 +1,11 @@
-ingress:
+x-uffizzi-ingress:
   service: nginx
   port: 80
 
 services:
   nginx:
     image: nginx:latest
-    continuous_previews:
+    x-uffizzi-continuous_previews:
       deploy_preview_when_pull_request_is_opened: true
       delete_preview_when_pull_request_is_closed: false
       delete_preview_after: 24h
