--- a/compose-file-4.yaml
+++ b/compose-file-4.yaml
@@ -5,7 +5,5 @@ x-uffizzi-ingress:
 services:
   nginx:
     image: nginx:latest
-    x-uffizzi-continuous_previews:
-      deploy_preview_when_pull_request_is_opened: true
-      delete_preview_when_pull_request_is_closed: false
-      delete_preview_after: 24h
+  redis:
+    redis: nginx:latest
