--- a/compose-file.yaml
+++ b/compose-file.yaml
@@ -7,7 +7,7 @@ services:
 
 x-uffizzi-ingress:
   service: webhooks-test-app
-  port: 80000000
+  port: 8080
 
 x-uffizzi-continuous-preview:
   share_to_github: true
