--- a/compose-file.yaml
+++ b/compose-file.yaml
@@ -10,6 +10,14 @@ services:
       - pg_user
       - pg_password
 
+secrets:
+  pg_user:
+    external: true               # indicates value is external to this repository
+    name: "POSTGRES_USER"        # i.e., value should be added in the Uffizzi Dashboard
+  pg_password:
+    external: true               # indicates value is external to this repository
+    name: "POSTGRES_PASSWORD"    # i.e., value should be added in the Uffizzi Dashboard
+
 x-uffizzi-ingress:
   service: webhooks-test-app
   port: 8080
