--- a/compose-file-2.yaml
+++ b/compose-file-2.yaml
@@ -1,11 +1,15 @@
-ingress:
-  service: nginx
-  port: 80
-
 services:
-  nginx:
-    image: nginx:latest
-    continuous_previews:
-      deploy_preview_when_pull_request_is_opened: true
-      delete_preview_when_pull_request_is_closed: true
-      delete_preview_after: 24h
+  webhooks-test-app:
+    image: nginx
+
+x-uffizzi-ingress:
+  service: webhooks-test-app
+  port: 8080
+
+x-uffizzi-continuous-preview:
+  share_to_github: true
+  delete_preview_after: 99h
+  tag_pattern: uffizzi_request_*
+  delete_preview_when_image_tag_is_updated: true
+  deploy_preview_when_image_tag_is_created: true
+  delete_preview_when_pull_request_is_closed: true
