--- a/compose-file-2.yaml
+++ b/compose-file-2.yaml
@@ -3,8 +3,8 @@ services:
     build: .
   redis:
     image: redis
-  ubuntu:
-    image: ubuntu
+  apline:
+    image: apline
   postgres:
     image: postgres
 
