--- a/compose-file-2.yaml
+++ b/compose-file-2.yaml
@@ -3,8 +3,8 @@ services:
     build: .
   redis:
     image: redis
-  apline:
-    image: apline
+  alpine:
+    image: alpine
   postgres:
     image: postgres
 
